--- a/layout.html
+++ b/layout.html
@@ -247,13 +247,15 @@
       </header>
       <article class="o-row o-row--lg">
         <div class="o-container">
-          <div class="o-layout">
-            <div class="o-layout__item">
+          <div
+            class="o-layout o-layout--gutter o-layout--align-center o-layout--gutter-lg o-layout--justify-space-between"
+          >
+            <div class="o-layout__item u-1-of-2">
               <figure>
                 <img src="img/yawning-cat-square.jpg" alt="This is a picture of a yawning cat" />
               </figure>
             </div>
-            <div class="o-layout__item">
+            <div class="o-layout__item u-1-of-2">
               <h3>I'm second in order</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque officiis laudantium rem error qui,
@@ -266,13 +268,15 @@
       </article>
       <article class="o-row o-row--lg">
         <div class="o-container">
-          <div class="o-layout">
-            <div class="o-layout__item">
+          <div
+            class="o-layout o-layout--gutter-lg o-layout--align-center o-layout--justify-space-between o-layout--row-reverse"
+          >
+            <div class="o-layout__item u-1-of-2">
               <figure>
                 <img src="img/yawning-cat-square.jpg" alt="This is a picture of a yawning cat" />
               </figure>
             </div>
-            <div class="o-layout__item">
+            <div class="o-layout__item u-1-of-2">
               <h3>I'm second in order</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque officiis laudantium rem error qui,
@@ -292,8 +296,8 @@
       </header>
       <div class="o-row o-row--lg">
         <div class="o-container">
-          <div class="o-layout">
-            <article class="o-layout__item">
+          <div class="o-layout o-layout--gutter">
+            <article class="o-layout__item u-1-of-3">
               <figure>
                 <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat" />
               </figure>
@@ -304,7 +308,7 @@
                 libero.
               </p>
             </article>
-            <article class="o-layout__item">
+            <article class="o-layout__item u-1-of-3">
               <figure>
                 <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat" />
               </figure>
@@ -315,7 +319,7 @@
                 libero.
               </p>
             </article>
-            <article class="o-layout__item">
+            <article class="o-layout__item u-1-of-3">
               <figure>
                 <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat" />
               </figure>
@@ -338,23 +342,23 @@
       </header>
       <div class="o-row o-row--lg">
         <div class="o-container">
-          <div class="o-layout">
-            <article class="o-layout__item">
+          <div class="o-layout o-layout--gutter">
+            <article class="o-layout__item o-layout u-1-of-3">
               <figure>
                 <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat" />
               </figure>
-              <div>
+              <div class="o-layout o-layout--align-end">
                 <h3>I'm first in order</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque officiis laudantium rem error qui.
                 </p>
               </div>
             </article>
-            <article class="o-layout__item">
+            <article class="o-layout__item o-layout u-1-of-3">
               <figure>
                 <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat" />
               </figure>
-              <div>
+              <div class="o-layout o-layout--align-center">
                 <h3>I'm second in order</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque officiis laudantium rem error qui,
@@ -362,11 +366,11 @@
                 </p>
               </div>
             </article>
-            <article class="o-layout__item">
+            <article class="o-layout__item o-layout u-1-of-3">
               <figure>
                 <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat" />
               </figure>
-              <div>
+              <div class="o-layout o-layout--align-start">
                 <h3>I'm third in order</h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque officiis laudantium rem error qui,
@@ -387,8 +391,8 @@
       </header>
       <div class="o-row o-row--lg">
         <div class="o-container">
-          <div class="o-layout">
-            <article class="o-layout__item o-layout">
+          <div class="o-layout o-layout--gutter o-layout--align-baseline">
+            <article class="o-layout__item o-layout u-1-of-3">
               <figure class="o-layout">
                 <img src="img/yawning-cat-square.jpg" alt="This is a picture of a yawning cat" />
               </figure>
@@ -399,7 +403,7 @@
                 </p>
               </div>
             </article>
-            <article class="o-layout__item o-layout">
+            <article class="o-layout__item o-layout u-1-of-3">
               <figure class="o-layout">
                 <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat" />
               </figure>
@@ -411,7 +415,7 @@
                 </p>
               </div>
             </article>
-            <article class="o-layout__item o-layout">
+            <article class="o-layout__item o-layout u-1-of-3">
               <figure class="o-layout">
                 <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat" />
               </figure>
@@ -437,11 +441,11 @@
       <div class="o-row o-row--lg">
         <div class="o-container">
           <figure>
-            <div class="o-layout">
-              <div class="o-layout__item">
+            <div class="o-layout o-layout--gutter o-layout--align-end">
+              <div class="o-layout__item u-1-of-2">
                 <img src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat" />
               </div>
-              <div class="o-layout__item">
+              <div class="o-layout__item u-1-of-2">
                 <figcaption class="u-max-width-sm">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque officiis laudantium rem error qui,
                   tempora natus reiciendis sed iste asperiores, accusamus optio facere a, unde nam, sunt minus mollitia
@@ -468,10 +472,10 @@
           <img srcset="img/picture-square@2x.jpg" alt="Picture of girl reading on a tablet" />
         </picture>
       </figure>
-      <div>
+      <div class="o-container">
         <div>
-          <div>
-            <div>
+          <div class="o-layout">
+            <div class="o-layout__item u-1-of-1 u-1-of-5-bp2">
               <figure class="c-author u-mb-xl-bp2">
                 <img class="c-author__image" src="img/avatar.jpg" alt="Simon Coudeville" />
                 <figcaption class="c-author__caption">
@@ -480,7 +484,7 @@
                 </figcaption>
               </figure>
             </div>
-            <div>
+            <div class="o-layout__item u-1-of-1 u-3-of-5-bp2">
               <div>
                 <p>
                   As we refine our methods of responsive web design,* we’ve increasingly focus*ed on measure (another
